# MLOps-ObjectDetection-KD

./: .dvcignore  .gitignore  Makefile  README.md  dvc.yaml  mlflow.db  pyproject.toml  requirements.txt  terraform.tfstate
.dvc/: config
.github/workflows/: cd.yaml  ci.yaml
configs/: config.yaml
infrastructure/docker/: Dockerfile  Dockerfile.training
infrastructure/kubernetes/: deployment.yaml  hpa.yaml  keda-scaledobject.yaml  pvc.yaml  service.yaml
infrastructure/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  tfplan  variables.tf
pipelines/airflow/dags/: mlops_pipeline.py
scripts/: benchmark.py  export_model.py  prepare_data.py  train_student_kd.py  train_teacher.py
src/: __init__.py
src/distillation/: __init__.py  hooks.py  losses.py  trainer.py
src/monitoring/: __init__.py  drift_detector.py  metrics.py  middleware.py
src/optimization/: __init__.py  calibrator.py  onnx_export.py  tensorrt_convert.py
src/serving/: __init__.py  app.py  gradio_ui.py  inference.py  schemas.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py  conftest.py  test_api.py  test_distillation.py  test_drift.py  test_inference.py
